k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${K8S_APP_NAME}
  labels:
    app: ${K8S_APP_NAME}
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: ${INGRESS_CLASS}
  tls:
    - hosts:
        - ${INGRESS_HOST}
        - www.${INGRESS_HOST}
      secretName: ${INGRESS_TLS_SECRET}
  rules:
    - host: ${INGRESS_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${K8S_SERVICE_NAME}
                port:
                  name: http
    - host: www.${INGRESS_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${K8S_SERVICE_NAME}
                port:
                  name: http
